document endpoints using swagger-jsdoc
